--- a/ProjectStudy/Study_1.html
+++ b/ProjectStudy/Study_1.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<!--이 부분은 주석문입니다. 웹 브라우저는 주석을 화면에 출력하지 않습니다.-->
+
 <html>
 
 <head>
-    문서제목, 자바스크립트 코드, CSS 스타일 정의, 메타데이터 정의
+    <meta charset="utf-8">
+    <title>프로젝트 사전 계획서</title>
 </head>
 
 <body>
-    문서의 본문 텍스트, 이미지, 테이블, 자바스크립트, 동영상 등 포함
+    <h1>
+        프로젝트 사전 계획서
+    </h1>
+    <hr/>
+    <h2>
+        1. 프로젝트를 생각하게 된 동기
+        <ul>
+            <p>
+                <li>인간의 소비욕구를 본인이 직접 제어하는 능력이 세월이 흘러감에 따라 점차 약해지고 있다는 뉴스 보도를 접하게 됨.</li><br>
+                <li>소비욕구는 개개인의 욕구이기에 정책적 또는 무력적으로도 바꿀 수 없음.</li><br>
+                <li>자산관리와 함께 자산에 대한 최적의 구매할 물품을 추천해주는 플랫폼이 존재한다면 구매할 의사가 있는 사람들, 자산관리를 하면서 최적의 구매를 원하는 사람들 모두 효과적으로 만족할 수 있을 것임.</li><br><br>
+            </p>
+        </ul>
+    </h2>
+    <h2>
+        2. 프로젝트의 제작 과정 구상
+        <ul>
+            <li>자산을 감안한 구매 홈페이지 초기화면 작성</li><br>
+            <li>초기 화면에 자산을 입력하라는 메세지와 자산입력 박스 작성</li><br>
+            <li>입력한 자산의 규모가 평균적인 시민의 규모를 초월할 정도로 높은 경우에 한해서 구매를 추천하는 멘트와 추천 물품을 추가로 안내하도록 작성</li><br>
+            <li>자산 입력 후에 물품 카테고리를 볼 수 있게끔 작성, 혹은 입력할 수 있게끔 작성</li><br>
+            <li>입력된 사용자의 자산과 물건의 최저가~최고가의 범위를 감안하여 최적의 물품을 추천하면 종료.(입력된 내용에 따라 추천해주는 과정은 파이썬의 웹크롤링을 통해 진행할 예정, 차후 개발 목표함.)</li>
+        </ul>
+    </h2>
+
 </body>
+
 
 </html>
