--- a/ProjectStudy/htmlStudy/2주/signup.html
+++ b/ProjectStudy/htmlStudy/2주/signup.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>회원가입</h1><hr/>
-        <form action="" method="GET">
+        <form action="signup.html" method="POST">
         <fieldset>
             <legend>계정정보</legend>
             <div>
