--- a/ProjectStudy/htmlStudy/2주/signup.html
+++ b/ProjectStudy/htmlStudy/2주/signup.html
@@ -19,7 +19,7 @@
                 <input type="password" name="password" id="id-password" required= "required">
             </div>
             <div>
-                <label for="id-password2">비밀번호</label>
+                <label for="id-password2">비밀번호 확인</label>
                 <input type="password" name="password2" id="id-password2" required= "required">
             </div>
         </fieldset>
@@ -69,7 +69,6 @@
         </div>
         <button type="submit" value="가입하기">가입하기</button>
         </form>
-
 
     </body>
 </html>
