--- a/ProjectStudy/webStudy/4/style.html
+++ b/ProjectStudy/webStudy/4/style.html
@@ -1,9 +1,8 @@
 <html>
     <head>
-        
         <meta charset="UTF-8">
         <title>몰디브 여행계획(1일차만)</title>
-        <link rel="stylesheet" type="text/css" href="4/style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
         <h1>몰디브 여행 계획(1일차)</h1>
@@ -28,7 +27,6 @@
                 <td><img src="./images/maldives.jpg"/></td>
             </tr>
             <tr>
-
             </tr>
         </table>
     </body>
